--- a/Changes
+++ b/Changes
@@ -4,3 +4,8 @@ Revision history for Perl extension WWW::WebExcel.
 	- original version; created by h2xs 1.23 with options
 		-XA -n WWW::WebExcel
 
+0.02  Thu Oct 14 09:22:53 2004
+	- new methods added:
+        	* add_data
+                * add_headers
+
