--- a/Changes
+++ b/Changes
@@ -6,6 +6,12 @@ Revision history for Perl extension WWW::WebExcel.
 
 0.02  Thu Oct 14 09:22:53 2004
 	- new methods added:
-        	* add_data
-                * add_headers
+        	* add_row
+                * set_headers
+
+0.03 Tue Oct 26 09:20:32 2004
+	- error messages added to older methods
+	- new methods added:
+        	* add_row_at
+                * sort_data
 
